database/network-policy.dev.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mongo-dev
  namespace: stalker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mongodb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Do not allow all pods in production. This is only for debugging purposes
    - ports:
        - protocol: TCP
          port: 27017
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: mongodb
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: arbiter
      ports:
        - protocol: TCP
          port: 27017

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mongo-arbiter-dev
  namespace: stalker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: arbiter
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: mongodb
      ports:
        - protocol: TCP
          port: 27017
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: mongodb
      ports:
        - protocol: TCP
          port: 27017
